[package]
name = "lobbier"
version = "0.1.0"
authors = ["etwyniel <etwyniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tokio-tungstenite = "0.9"
actix = "0.8"
actix-web = "1"
actix-web-actors = "1"
actix-files = "0.1"
futures = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
env_logger = "0.7"
